--- a/app1/index.html
+++ b/app1/index.html
@@ -119,6 +119,28 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalRegistroDespesa" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div id="modal_header" class="modal-header text-success">
+            <h5 class="modal-title" id="modal_titulo">Gravação realizada</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id="modal_body" class="modal-body">
+            Despeza cadastrada com sucesso.
+          </div>
+          <div class="modal-footer">
+            <button id="modal_btn" type="button" class="btn btn-success" data-dismiss="modal">Voltar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    </div>
   </body>	
 
 </html>
